@@ -90,7 +90,7 @@ class ReleaseDetailsEndpoint(ProjectEndpoint):
         except Release.DoesNotExist:
             raise ResourceDoesNotExist
 
-        return Response(serialize(release, request.user))
+        return Response(serialize(release, request.user, project=project))
 
     @attach_scenarios([update_release_scenario])
     def put(self, request, project, version):
