@@ -6,7 +6,7 @@ from django.utils import timezone
 from uuid import uuid4
 
 from sentry.api.serializers import serialize
-from sentry.models import Release, TagValue
+from sentry.models import Release, ReleaseProject, TagValue
 from sentry.testutils import TestCase
 
 
@@ -14,12 +14,21 @@ class ReleaseSerializerTest(TestCase):
     def test_simple(self):
         user = self.create_user()
         project = self.create_project()
+        project2 = self.create_project(organization=project.organization)
         release = Release.objects.create(
             organization_id=project.organization_id,
-            version=uuid4().hex,
-            new_groups=1,
+            version=uuid4().hex
         )
         release.add_project(project)
+        release.add_project(project2)
+        ReleaseProject.objects.filter(
+            release=release,
+            project=project
+        ).update(new_groups=1)
+        ReleaseProject.objects.filter(
+            release=release,
+            project=project2
+        ).update(new_groups=1)
         TagValue.objects.create(
             project=project,
             key='sentry:release',
@@ -32,9 +41,14 @@ class ReleaseSerializerTest(TestCase):
         result = serialize(release, user)
         assert result['version'] == release.version
         assert result['shortVersion'] == release.version
-        assert result['newGroups'] == 1
+        # should be sum of all projects
+        assert result['newGroups'] == 2
         assert result['firstEvent']
         assert result['lastEvent']
+
+        result = serialize(release, user, project=project)
+        # should be groups from one project
+        assert result['newGroups'] == 1
 
         # Make sure a sha1 value gets truncated
         release.version = '0' * 40
