@@ -13,6 +13,7 @@ Version 8.13 (Unreleased)
 - Show Images Loaded section for cocoa events with version number.
 - Fixed bug where workflow notification subject may not include a custom email prefix.
 - Added configurable subject templates for individual alert emails (`mail:subject_template` option).
+- Added data migration to populate ReleaseProject.new_groups
 
 Schema Changes
 ~~~~~~~~~~~~~~
